fix header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,14 @@ header {
     background-color: #ff6900;
     color: white;
     padding: 20px 0;
-    margin: auto;
 }
 
 .navig {
     display: flex;
     justify-content: flex-start;
-    gap: 5px;
+    max-width: 1000px;
+    margin: auto;
+    gap: 10px;
 }
 
 .sezione:hover {
